@@ -2,8 +2,7 @@
 	ability to set art from local image ("Set from file...")
 	optional statusbar (num songs, total length)
 	dbus - show previous instance if user tries to launch another
-	support for multimedia keys (possible in pure pygtk?)
-	re-show icon if systray is closed/opened (xfce4-paenl -r)
+	support for multimedia keys (possible in pure pygtk? nope)
 	pref to autoplay when using 'replace'?
 
 Future:
